handover build, renamed source files to remove caps and removed spaces from some resources, console log and other debug items (cheats) hidden behind a debug flag

--- a/src/Beanstalk/wwwroot/index.html
+++ b/src/Beanstalk/wwwroot/index.html
@@ -18,11 +18,11 @@
     <link rel="stylesheet" href="lib/modernizr/test/qunit/qunit.css">
     <link rel="stylesheet" href="lib/seiyria-bootstrap-slider/bootstrap-slider.css">
     <link rel="stylesheet" href="css/beanstalk.css">
-    <link rel="stylesheet" href="css/game screen.css">
-    <link rel="stylesheet" href="css/highscores screen.css">
-    <link rel="stylesheet" href="css/instructions screen.css">
-    <link rel="stylesheet" href="css/login screen.css">
-    <link rel="stylesheet" href="css/main menu.css">
+    <link rel="stylesheet" href="css/game-screen.css">
+    <link rel="stylesheet" href="css/highscores-screen.css">
+    <link rel="stylesheet" href="css/instructions-screen.css">
+    <link rel="stylesheet" href="css/login-screen.css">
+    <link rel="stylesheet" href="css/main-menu.css">
     <!-- endinjector -->
 		
     <!-- injector:js -->
@@ -42,46 +42,44 @@
     <script src="lib/seiyria-bootstrap-slider/bootstrap-slider.js"></script>
     <script src="lib/underscore/underscore.js"></script>
     <script src="lib/wordCompare.js"></script>
-    <script src="js/actors/tinytown/TinyTownAnim.js"></script>
-    <script src="js/screens/ScreenBase.js"></script>
-    <script src="js/actors/Background.js"></script>
-    <script src="js/actors/Captcha.js"></script>
-    <script src="js/actors/LoadingBar.js"></script>
-    <script src="js/actors/Plant.js"></script>
-    <script src="js/actors/PlantStalk.js"></script>
-    <script src="js/actors/Seed.js"></script>
-    <script src="js/actors/SidePlant.js"></script>
-    <script src="js/actors/TopStalk.js"></script>
-    <script src="js/actors/tinytown/Blimp - Copy.js"></script>
-    <script src="js/actors/tinytown/Blimp.js"></script>
-    <script src="js/actors/tinytown/Deer - Copy.js"></script>
-    <script src="js/actors/tinytown/Deer.js"></script>
-    <script src="js/actors/tinytown/ManWindow.js"></script>
+    <script src="js/actors/tinytown/tiny-town-anim.js"></script>
+    <script src="js/screens/screen-base.js"></script>
+    <script src="js/actors/background.js"></script>
+    <script src="js/actors/captcha.js"></script>
+    <script src="js/actors/loading-bar.js"></script>
+    <script src="js/actors/plant-stalk.js"></script>
+    <script src="js/actors/plant.js"></script>
+    <script src="js/actors/seed.js"></script>
+    <script src="js/actors/side-plant.js"></script>
+    <script src="js/actors/tinytown/blimp.js"></script>
+    <script src="js/actors/tinytown/deer.js"></script>
+    <script src="js/actors/tinytown/man-window.js"></script>
+    <script src="js/actors/top-satalk.js"></script>
     <script src="js/data/Beanstalk.js"></script>
     <script src="js/main.js"></script>
-    <script src="js/managers/AudioManager.js"></script>
-    <script src="js/managers/BackendManager.js"></script>
-    <script src="js/managers/BeanstalkManager.js"></script>
-    <script src="js/managers/CaptchaManager.js"></script>
-    <script src="js/managers/GameAmbienceManager.js"></script>
-    <script src="js/managers/GameManager.js"></script>
-    <script src="js/managers/PersistanceManager.js"></script>
-    <script src="js/managers/ResourcesManager.js"></script>
-    <script src="js/managers/ScreensManager.js"></script>
-    <script src="js/managers/SocialManager.js"></script>
-    <script src="js/managers/SplashScreensManager.js"></script>
-    <script src="js/managers/SpriteSheetManager.js"></script>
-    <script src="js/managers/UserManager.js"></script>
-    <script src="js/screens/GameScreen.js"></script>
-    <script src="js/screens/HighscoresScreen.js"></script>
-    <script src="js/screens/InitialLoadingScreen.js"></script>
-    <script src="js/screens/InstructionScreen.js"></script>
-    <script src="js/screens/LoginScreen.js"></script>
-    <script src="js/screens/MainMenu.js"></script>
-    <script src="js/utils/SBSprite.js"></script>
-    <script src="js/utils/SBSpriteSheet.js"></script>
-    <script src="js/utils/SBSpriteUtils.js"></script>
-    <script src="js/utils/Utils.js"></script>
+    <script src="js/managers/audio-manager.js"></script>
+    <script src="js/managers/backend-manager.js"></script>
+    <script src="js/managers/beanstalk-manager.js"></script>
+    <script src="js/managers/captcha-manager.js"></script>
+    <script src="js/managers/game-ambience-manager.js"></script>
+    <script src="js/managers/game-manager.js"></script>
+    <script src="js/managers/persistance-manager.js"></script>
+    <script src="js/managers/resources-manager.js"></script>
+    <script src="js/managers/screens-manager.js"></script>
+    <script src="js/managers/social-manager.js"></script>
+    <script src="js/managers/spash-screens-manager.js"></script>
+    <script src="js/managers/sprite-sheet-manager.js"></script>
+    <script src="js/managers/user-manager.js"></script>
+    <script src="js/screens/game-screen.js"></script>
+    <script src="js/screens/highscores-screen.js"></script>
+    <script src="js/screens/initial-loading-screen.js"></script>
+    <script src="js/screens/instructions-screen.js"></script>
+    <script src="js/screens/login-screen.js"></script>
+    <script src="js/screens/main-menu.js"></script>
+    <script src="js/utils/sb-sprite-utils.js"></script>
+    <script src="js/utils/sb-sprite.js"></script>
+    <script src="js/utils/sp-spritesheet.js"></script>
+    <script src="js/utils/utils.js"></script>
     <!-- endinjector -->
 
 </head>
