Update backend path, update main page facebook metadata

--- a/src/Beanstalk/wwwroot/index.html
+++ b/src/Beanstalk/wwwroot/index.html
@@ -1,15 +1,16 @@
 <html>
 <head>
+	<title>Beanstalk</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
 
     <!-- Facebook Meta -->
-    <meta property="og:url" content="http://tiltfactor.pepwuper.com/Beanstalk" />
+    <meta property="og:url" content="http://beanstalkgame.org" />
     <meta property="og:title" content="Beanstalk" />
-    <meta property="og:description" content="Checkout how high I am in Beanstalk!" />
+    <meta property="og:description" content="A calming transcription game." />
     <meta property="og:site_name" content="Beanstalk" />
     <meta property="og:app_id" content="849783798403345" />
-    <meta property="og:image" content="http://tiltfactor.pepwuper.com/Beanstalk/images/UI/common/beanstalk_logo.png" />
+    <meta property="og:image" content="http://beanstalkgame.org/images/UI/common/beanstalk_logo.png" />
 
     <!-- injector:css -->
     <link rel="stylesheet" href="lib/bootstrap/bootstrap.css">
@@ -44,15 +45,15 @@
     <script src="lib/wordCompare.js"></script>
     <script src="js/actors/tinytown/tiny-town-anim.js"></script>
     <script src="js/screens/screen-base.js"></script>
-    <script src="js/actors/background.js"></script>
-    <script src="js/actors/captcha.js"></script>
+    <script src="js/actors/Background.js"></script>
+    <script src="js/actors/Captcha.js"></script>
     <script src="js/actors/loading-bar.js"></script>
     <script src="js/actors/plant-stalk.js"></script>
-    <script src="js/actors/plant.js"></script>
-    <script src="js/actors/seed.js"></script>
+    <script src="js/actors/Plant.js"></script>
+    <script src="js/actors/Seed.js"></script>
     <script src="js/actors/side-plant.js"></script>
-    <script src="js/actors/tinytown/blimp.js"></script>
-    <script src="js/actors/tinytown/deer.js"></script>
+    <script src="js/actors/tinytown/Blimp.js"></script>
+    <script src="js/actors/tinytown/Deer.js"></script>
     <script src="js/actors/tinytown/man-window.js"></script>
     <script src="js/actors/top-satalk.js"></script>
     <script src="js/data/Beanstalk.js"></script>
