--- a/src/Beanstalk/wwwroot/index.html
+++ b/src/Beanstalk/wwwroot/index.html
@@ -4,6 +4,9 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
 
+    <link rel="icon" type="image/icon" href="favicon.ico">
+    <link rel="shortcut icon" type="image/icon" href="favicon.ico">
+
     <!-- Facebook Meta -->
     <meta property="og:url" content="http://beanstalkgame.org" />
     <meta property="og:title" content="Beanstalk" />
