Add "leave feedback" instructions card, center instructions pagination

--- a/src/Beanstalk/wwwroot/html/instructions-screen.html
+++ b/src/Beanstalk/wwwroot/html/instructions-screen.html
@@ -5,7 +5,7 @@
 	<img class="logo" src="images/UI/common/beanstalk_logo.png" />
 
 	<div class="menu-container">
-		<p>When an opponent tries to reach your endzone, stop it by typing the phrase in the corresponding row and pressing ‘enter.’</p>
+		<p>Type the phrase and press 'enter' to grow your beanstalk</p>
 		<img class="instruction-img" src="images/Instructions/instructions1.png" />
 		<button class="left-arrow"></button>
 		<button class="right-arrow"></button>
@@ -15,6 +15,7 @@
 		<img src="images/UI/instructions/page_indicator_off.png" />
 		<img src="images/UI/instructions/page_indicator_off.png" />
 		<img src="images/UI/instructions/page_indicator_on.png" />
+		<img src="images/UI/instructions/page_indicator_off.png" />
 		<img src="images/UI/instructions/page_indicator_off.png" />
 		<img src="images/UI/instructions/page_indicator_off.png" />
 		<img src="images/UI/instructions/page_indicator_off.png" />
