Update default text box message to "type word or phrase"

--- a/src/Beanstalk/wwwroot/html/game-screen.html
+++ b/src/Beanstalk/wwwroot/html/game-screen.html
@@ -11,7 +11,7 @@
 
 		<div class="bottom-hud">
 			<button class="pass-btn">PASS</button>
-			<input placeholder="enter phrase" autocomplete="off" autocapitalize="off" autocorrect="off" spellcheck="false" />
+			<input placeholder="type word or phrase" autocomplete="off" autocapitalize="off" autocorrect="off" spellcheck="false" />
 			<button class="submit">SUBMIT</button>
 		</div>
 	</div>
