--- a/src/Beanstalk/wwwroot/html/instructions-screen.html
+++ b/src/Beanstalk/wwwroot/html/instructions-screen.html
@@ -26,6 +26,7 @@
 		<img src="images/UI/instructions/page_indicator_off.png" />
 		<img src="images/UI/instructions/page_indicator_off.png" />
 		<img src="images/UI/instructions/page_indicator_off.png" />
+		<img src="images/UI/instructions/page_indicator_off.png" />
 	</div>
 	
 </div>
