Reenable and hardcode highscores screen
The highscores on this screen will need to be updated to the
current ones when we pull this to the server.

Also added a "Highscores are no longer being recorded" message
that may want to be swapped out.

--- a/src/Beanstalk/wwwroot/html/main-menu.html
+++ b/src/Beanstalk/wwwroot/html/main-menu.html
@@ -4,6 +4,7 @@
 
 	<div class="menu-container">
 		<button class="play text-button">PLAY</button>
+		<button class="highscores text-button">HIGH SCORES</button>
 		<button class="instructions text-button">HELP</button>
 		<!--<button class="music"></button>-->
 		<button class="sound"></button>
