--- a/src/Beanstalk/wwwroot/html/highscores-screen.html
+++ b/src/Beanstalk/wwwroot/html/highscores-screen.html
@@ -8,50 +8,27 @@
 		<div class="alltime">
 			<div class="score-row row">
 				<span class="position col-xs-4">1st</span>
-				<span class="name col-xs-4">martin.c</span>
-				<span class="height col-xs-4">999m</span>
+				<span class="name col-xs-4">sjdilles</span>
+				<span class="height col-xs-4">363840</span>
 			</div>
 			<div class="score-row row">
 				<span class="position col-xs-4">2nd</span>
-				<span class="name col-xs-4">martin.c</span>
-				<span class="height col-xs-4">999m</span>
+				<span class="name col-xs-4">mlwoodward..</span>
+				<span class="height col-xs-4">269750</span>
 			</div>
 			<div class="score-row row">
 				<span class="position col-xs-4">3rd</span>
-				<span class="name col-xs-4">martin.c</span>
-				<span class="height col-xs-4">999m</span>
+				<span class="name col-xs-4">patty_john..</span>
+				<span class="height col-xs-4">118670</span>
 			</div>
 			<div class="score-row row player">
-				<span class="position col-xs-4">9999th</span>
-				<span class="name col-xs-4">martin.c</span>
-				<span class="height col-xs-4">999m</span>
+				<span class="position col-xs-4">..</span>
+				<span class="name col-xs-4">..</span>
+				<span class="height col-xs-4">..</span>
 			</div>
 		</div>
 
-		<div class="weekly">
-			<div class="score-row row">
-				<span class="position col-xs-4">1st</span>
-				<span class="name col-xs-4">martin.c</span>
-				<span class="height col-xs-4">999m</span>
-			</div>
-			<div class="score-row row">
-				<span class="position col-xs-4">2nd</span>
-				<span class="name col-xs-4">martin.c</span>
-				<span class="height col-xs-4">999m</span>
-			</div>
-			<div class="score-row row">
-				<span class="position col-xs-4">3rd</span>
-				<span class="name col-xs-4">martin.c</span>
-				<span class="height col-xs-4">999m</span>
-			</div>
-			<div class="score-row row player">
-				<span class="position col-xs-4">9999th</span>
-				<span class="name col-xs-4">martin.c</span>
-				<span class="height col-xs-4">999m</span>
-			</div>
-		</div>
 
-		<button class="share">SHARE</button>
 	</div>
 
 </div>
